--- a/main.css
+++ b/main.css
@@ -2,8 +2,8 @@
 h1 {
     text-align: center;
 }
-body{
-    font-family: Arial, Helvetica, sans-serif;
+.section1{
 }
+
 .projects ul{list-style-type: square;
 }
